# GateRust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
client/: electron-builder.yml  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx  app.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: main.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  lib.rs  main.rs
client/src/components/: ConnectionSettings.tsx  LoginForm.tsx  ServiceList.tsx  StatusPane.tsx  TunnelList.tsx
client/src/lib/: client-types.ts  config.ts  desktop.ts  types.ts
client/src/main/: backend.ts  index.ts
client/src/preload/: index.ts
client/src/renderer/: index.html
client/src/renderer/src/: App.tsx  app.css  env.d.ts  main.tsx
client/src/renderer/src/components/: ServiceList.tsx  StatusPane.tsx
client/src/renderer/src/lib/: config.ts  types.ts
client/src/shared/: channels.ts  types.ts
config/: client.example.toml  proxy.example.toml  server.example.toml  web.example.toml
crates/gaterust-client/: Cargo.toml
crates/gaterust-client/src/: api.rs  app.rs  browser.rs  error.rs  lib.rs  main.rs  paths.rs
crates/gaterust-client/src/ui/: app.css  app.js  index.html
crates/gaterust-control/: Cargo.toml
crates/gaterust-control/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  store.rs
crates/gaterust-proxy/: Cargo.toml
crates/gaterust-proxy/src/: acme.rs  cache.rs  cloudflare.rs  config.rs  error.rs  integration_tests.rs  lib.rs  proxy.rs  router.rs  server.rs  tls.rs  watcher.rs
crates/gaterust-server/: Cargo.toml
crates/gaterust-server/src/: main.rs
crates/gaterust-tunnel/: Cargo.toml
crates/gaterust-tunnel/src/: client.rs  config.rs  error.rs  identity.rs  integration_tests.rs  lib.rs  protocol.rs  rate_limit.rs  relay.rs  runtime.rs  tls.rs  watcher.rs
crates/gaterust-tunnel/src/server/: mod.rs  registry.rs  socks5.rs  stream.rs  udp.rs
docs/: first.md  local-testing.md  proxy.md  tunnel.md
scripts/: gaterust.service  gaterust.sh  test-local-release.sh
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.svelte  App.tsx  main.tsx  styles.css
web/src/components/: AppShell.tsx  ClientGenerator.svelte  ClientGenerator.tsx  Dashboard.svelte  Dashboard.tsx  Login.svelte  Login.tsx  ProxyPanel.svelte  ProxyPanel.tsx  Sidebar.svelte  ThemeButton.tsx  TunnelPanel.svelte  TunnelPanel.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  ConfirmAction.tsx  Dialog.tsx  Fields.tsx  Notice.tsx  Page.tsx  Panel.tsx  Table.tsx
web/src/hooks/: useTheme.ts
web/src/lib/: api.ts  types.ts
