[workspace]
resolver = "3"
members = [
    "client/src-tauri",
    "crates/gaterust-client",
    "crates/gaterust-control",
    "crates/gaterust-proxy",
    "crates/gaterust-server",
    "crates/gaterust-tunnel",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/jsryin/GateRust"

[workspace.dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.12.1"
clap = { version = "4.6.3", features = ["derive"] }
futures-util = "0.3.33"
http = "1.4.2"
http-body-util = "0.1.4"
hyper = { version = "1.11.0", features = ["client", "http1", "server"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "ring", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "server", "tokio"] }
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "ring"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
notify = "8.2.0"
quinn = { version = "0.11.11", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
rand = "0.10.2"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
rustls-acme = { version = "0.15.3", default-features = false, features = ["ring", "tokio", "tower", "webpki-roots"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
subtle = "2.6.1"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
webpki-roots = "1.0.9"
zeroize = "1.9.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
