[package]
name = "gaterust-client-desktop"
description = "GateRust Tauri desktop client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
gaterust-client = { path = "../../crates/gaterust-client" }
gaterust-tunnel = { path = "../../crates/gaterust-tunnel" }
serde.workspace = true
tauri = { version = "2.11.5", default-features = false, features = [
    "compression",
    "dynamic-acl",
    "wry",
    "x11",
] }
tauri-plugin-single-instance = "2.4.3"
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
