[package]
name = "gaterust-client"
description = "GateRust QUIC tunnel client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
gaterust-tunnel = { path = "../gaterust-tunnel" }
serde.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
