[package]
name = "gaterust-control"
description = "GateRust authenticated Web control plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
gaterust-proxy = { path = "../gaterust-proxy", optional = true }
gaterust-tunnel = { path = "../gaterust-tunnel", optional = true }
http.workspace = true
jsonwebtoken.workspace = true
notify.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true

[features]
default = ["proxy", "tunnel"]
proxy = ["dep:gaterust-proxy"]
tunnel = ["dep:gaterust-tunnel"]

[dev-dependencies]
tempfile = "3.20.0"
tower = { version = "0.5.2", features = ["util"] }

[lints]
workspace = true
