[package]
name = "gaterust-proxy"
description = "GateRust reverse proxy and automatic TLS module"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
instant-acme.workspace = true
notify.workspace = true
rustls.workspace = true
rustls-acme.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-rustls.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
