[package]
name = "gaterust-server"
description = "GateRust unified tunnel and reverse proxy server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
gaterust-proxy = { path = "../gaterust-proxy", optional = true }
gaterust-tunnel = { path = "../gaterust-tunnel", optional = true }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["proxy", "tunnel"]
proxy = ["dep:gaterust-proxy"]
tunnel = ["dep:gaterust-tunnel"]

[lints]
workspace = true
