[package]
name = "gaterust-tunnel"
description = "GateRust QUIC tunnel transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
notify.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand.workspace = true
rcgen = "0.14.5"
tempfile = "3.20.0"

[lints]
workspace = true
